cleaning up Selection Sort Test